<resources>
    <string name="app_name">Sale</string>
    <string name="trolley_icon">Trolley Icon</string>
    <string name="start_selling">Start selling</string>
    <string name="contact_number">Contact number...</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login now</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification">OTP verification</string>
    <string name="we_will_send_you_an_otp_on_you_mobile_number">We will send you an OTP on you mobile number</string>
    <string name="enter_your_otp_sent_to">Enter your OTP sent to </string>
    <string name="_0">0</string>
    <string name="did_not_receive_the_otp">Did not receive the OTP? </string>
    <string name="resend_otp">Resend OTP</string>
    <string name="not_you">Not you?</string>
    <string name="switch_account">Switch account</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_setting">Account Setting</string>
    <string name="account_health">Account Health</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="my_income">My Income</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="user_profile_photo">User profile photo</string>
    <string name="about">About</string>
    <string name="my_chats">My Chats</string>
    <string name="no_messages_icon">No messages icon</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="start_texting">Start Texting</string>
    <string name="followers">Followers</string>
    <string name="my_tools">My Tools</string>
    <string name="add_products">Add Products</string>
    <string name="products">Products</string>
    <string name="return_orders">Return Orders</string>
    <string name="reviews">Reviews</string>
    <string name="manage_reviews">Manage Reviews</string>
    <string name="orders">Orders</string>
    <string name="basic_functions">Basic Functions</string>
    <string name="register_or_login">Register or Login</string>
    <string name="add_product">Add product</string>
    <string name="product_image">Product Image</string>
    <string name="product_images">Product Images</string>
    <string name="back_to_tools">Back to Tools</string>
    <string name="product_name">Name</string>
    <string name="product_category">Category:</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="availability">Availability</string>
    <string name="attributes">Attributes</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="description">Description</string>
    <string name="warranty">Warranty</string>
    <string name="save">Save</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="dangerous_goods">Dangerous Goods</string>
    <string name="package_weight">Package Weight</string>
    <string name="_1_300">0.01–300</string>
    <string name="package_dimensions">Package Dimensions</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
</resources>