<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_to_tools"
        android:src="@drawable/arrow"
        android:id="@+id/backToTools"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/shippingInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/shipping_information"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/packageWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/package_weight"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shippingInfo" />

    <EditText
        android:id="@+id/packageWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/_1_300"
        android:padding="15dp"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toStartOf="@+id/weightSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/packageWeightText" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/weightSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/packageWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/packageWeight"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/packageDimensions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/package_dimensions"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/packageWeight" />

    <EditText
        android:id="@+id/pkgLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_1_300"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_text"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@id/pkgWidth"
        app:layout_constraintTop_toBottomOf="@+id/packageDimensions" />

    <EditText
        android:id="@+id/pkgWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/_1_300"
        android:background="@drawable/edit_text"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@id/pkgHeight"
        app:layout_constraintTop_toBottomOf="@+id/packageDimensions"
        app:layout_constraintStart_toEndOf="@id/pkgLength" />

    <EditText
        android:id="@+id/pkgHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/_1_300"
        android:background="@drawable/edit_text"
        android:padding="10dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pkgWidth"
        app:layout_constraintTop_toBottomOf="@+id/packageDimensions" />

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        app:layout_constraintEnd_toEndOf="@+id/pkgLength"
        app:layout_constraintStart_toStartOf="@id/pkgLength"
        app:layout_constraintTop_toBottomOf="@id/pkgLength" />

    <TextView
        android:id="@+id/width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/width"
        app:layout_constraintEnd_toEndOf="@+id/pkgWidth"
        app:layout_constraintStart_toStartOf="@id/pkgWidth"
        app:layout_constraintTop_toBottomOf="@id/pkgWidth" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        app:layout_constraintEnd_toEndOf="@+id/pkgHeight"
        app:layout_constraintStart_toStartOf="@id/pkgHeight"
        app:layout_constraintTop_toBottomOf="@id/pkgHeight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        app:layout_constraintBottom_toTopOf="@+id/length"
        app:layout_constraintEnd_toStartOf="@+id/pkgWidth"
        app:layout_constraintStart_toEndOf="@id/pkgLength"
        app:layout_constraintTop_toTopOf="@+id/pkgLength"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        app:layout_constraintBottom_toBottomOf="@+id/pkgHeight"
        app:layout_constraintEnd_toStartOf="@+id/pkgHeight"
        app:layout_constraintStart_toEndOf="@id/pkgWidth"
        app:layout_constraintTop_toTopOf="@+id/pkgHeight"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveShippingInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/length" />



</androidx.constraintlayout.widget.ConstraintLayout>